tests/sintax-semanth/should_fail/test7Wrong.tds
//This test should fail because there is an statement after return.
begin
	bool fun(integer w)
		begin
			integer ab;
			integer bc;

			ab = 5;
			bc = 10;
			return (w == ab + bc);
			ab = 7;
		end

	void main()
		begin
			integer h;
			bool w;
			h = 10;
			w = true;
		end
end